public/studentsubmission/Logs/demo1/[118-69-133-17][89371521][demo1][CE150762][C].cpp.log
Compile Error
[118-69-133-17][89371521][demo1][CE150762][C].cpp: In function 'int main()':
[118-69-133-17][89371521][demo1][CE150762][C].cpp:26:10: error: 'i' was not declared in this scope
     for (i=0; i<n; i++)
          ^
[118-69-133-17][89371521][demo1][CE150762][C].cpp:30:12: error: invalid conversion from 'int' to 'const char*' [-fpermissive]
     printf(result);
            ^~~~~~
In file included from [118-69-133-17][89371521][demo1][CE150762][C].cpp:6:
C:/Program Files (x86)/mingw-w64/i686-8.1.0-posix-dwarf-rt_v6-rev0/mingw32/i686-w64-mingw32/include/stdio.h:509:48: note:   initializing argument 1 of 'int printf(const char*, ...)'
   int __cdecl printf(const char * __restrict__ _Format,...);
                      ~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
